--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
-<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/@quasar/extras/material-icons/material-icons.css">
-<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/quasar/dist/quasar.min.css">
-<script src="portfolio-app.js"></script>
+
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Portfolio App</title>
+  <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+  <meta name="robots" content="noindex, nofollow">
+  <meta name="googlebot" content="noindex, nofollow">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src="portfolio-app.js"></script>
+</head>
+<body>
 
 <div id="q-app">
-  <div class="q-ma-md">
-    Fork and make your own!
-    Do NOT use self-closing tags here on jsFiddle.
-  </div>
-
-  <q-btn color="primary" icon="warning" label="Notify" @click="notify" class="q-ma-md"></q-btn>
-
-  <div class="q-ma-md">
-    Running Quasar v{{ version }}
-  </div>
+  <app></app>
 </div>
+
+</body>
+</html>
