--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <meta name="robots" content="noindex, nofollow">
   <meta name="googlebot" content="noindex, nofollow">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script>
+    window.is_dev = true
+  </script>
   <script src="portfolio-app.js"></script>
 </head>
 <body>
